Lots of little changes. Start a real TODO list. Warnings police. Add place holder Change My Password page. @GeneratedValue on the three entities' Id fields.